# cjdb

./: .dockerignore  .gitignore  LICENSE  Makefile  Pipfile  README.md  changelog.md  dockerfile  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS
benchmark/: queries.sql
cj2pgsql/: Pipfile  README.md  cj2pgsql.py  main.py
cj2pgsql/modules/: arg_parser.py  checks.py  extensions.py  geometric.py  importer.py  utils.py
cj2pgsql/resources/: messages.py  object_types.yml  post_import.sql  strings.py
cj2pgsql/test/: cli_test.py  conftest.py
cj2pgsql/test/files/: extension2.jsonl  geomtemplate.city.jsonl
cj2pgsql/test/files/cjfiles/: tile_901_trimmed.jsonl
cj2pgsql/test/inputs/: arguments
cjdb/: README.md  __init__.py  cli.py  logger.py  main.py
cjdb/model/: BASICQUERIES.md  README.md
cjdb/model/sqlalchemy_models/: __init__.py
cjdb/modules/: arg_parser.py  checks.py  exceptions.py  exporter.py  extensions.py  geometric.py  importer.py  utils.py
cjdb/resources/: object_types.py  post_import.sql  strings.py
cjdb/test/: cli_test.py  conftest.py
cjdb/test/files/: vienna.jsonl
cjdb/test/inputs/: arguments
cjdb_api/: Pipfile  README.md  run.py
cjdb_api/app/: __init__.py  arg_parser.py  db.py  vars.py
cjdb_api/app/models/: __init__.py
cjdb_api/app/resources/: __init__.py  deletion.py  querying.py  server.py  updating.py
cjdb_api/app/routes/: __init__.py  v1.py
cjdb_api/app/schemas/: __init__.py
cjdb_api/app/templates/: all.html  home.html  root.html  swagger.html
docs/: .buildinfo  cjdb.html  cjdb_readme.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: cjdb.doctree  cjdb_readme.doctree  environment.pickle  index.doctree
docs/.doctrees/source/: cjdb_readme.doctree
docs/_sources/: index.rst.txt
docs/config/: conf.py  index.rst
docs/content/: .buildinfo  index.html  searchindex.js
docs/content/.doctrees/: environment.pickle  index.doctree
model/: README.md  model.sql  post_import.sql
model/sqlalchemy_models/: ImportMetaModel.py  __init__.py
sphinx/: cjdb.rst  conf.py  index.rst
tests/: cjdb_test.py  cli_test.py  conftest.py  special_cases_test.py  unit_test.py
tests/files/: cube_cjv2.city.jsonl  ex.jsonl  extension.city.jsonl  no_cityjson_obj.city.jsonl  no_metadata.city.jsonl
tests/files/cjfiles/: 5870_ext.jsonl
tests/files/vienna_modified/: vienna.jsonl
tests/inputs/: arguments
tests/sql/: schema.sql
