[tool.poetry]
name = "cjdb"
version = "1.1.0"
description = "CJDB is a tool that enables CityJSON integration with a PostgreSQL database"
authors = ["Cynthia Cai", "Lan Yan", "Yitong Xia", "Chris Poon", "Siebren Meines", "Leon Powalka"]
maintainers = ["Gina Stavropoulou <ginastavropoulou@gmail.com>"]
license = "MIT"
repository = "https://github.com/tudelft3d/cjdb"
readme = "README.md"
keywords = ["CityJSON", "PostgreSQL"]

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.1"
numpy = "^1.24.2"
pyproj = "^3.5.0"
requests = "^2.28.2"
psycopg2 = "^2.9.6"
geoalchemy2 = "^0.13.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
