[tool.poetry]
name = "cjdb"
version = "2.1.0"
description = "CJDB is a tool that enables CityJSON integration with a PostgreSQL database"
authors = ["Cynthia Cai", "Lan Yan", "Yitong Xia", "Chris Poon", "Siebren Meines", "Leon Powalka"]
maintainers = ["Gina Stavropoulou <g.stavropoulou@tudelft.nl>", "Hugo Ledoux <h.ledoux@tudelft.nl>"]
license = "MIT"
repository = "https://github.com/tudelft3d/cjdb"
readme = "README.md"
keywords = ["CityJSON", "PostgreSQL"]

[tool.poetry.scripts]
cjdb = "cjdb.cli:cjdb"

[tool.poetry.dependencies]
python = "^3.8.1"
shapely = "^2.0.1"
numpy = "^1.24.2"
pyproj = "^3.5.0"
requests = "^2.28.2"
psycopg2-binary = "^2.9.6"
geoalchemy2 = "^0.13.1"
cjio = "^0.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pytest-postgresql = "^4.1.1"
psycopg = "^3.1.8"
furo = "^2023.7.26"
sphinx-click = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
