[metadata]
name = cjdb
version = 0.0.7a
description = CJDB is a set of tools enabling CityJSON integration with a PostgreSQL database
long_description = file: README.md
keywords = CityJSON
license_files = LICENSE
python_requires = >=3.7
license = MIT
url = https://github.com/leoleonsio/cjdb
author = Cynthia Cai, Lan Yan, Yitong Xia, Chris Poon, Siebren Meines, Leon Powalka

[options]
packages = 
    cj2pgsql
    cj2pgsql.modules
    cj2pgsql.resources
    model.sqlalchemy_models
    cjdb_api
    cjdb_api.app
    # todo add the api modules
include_package_data = True

[options.package_data]
cj2pgsql.resources = *.sql

[options.entry_points]
console_scripts =
    cj2pgsql = cj2pgsql.main:main
    cjdb_api = cjdb_api.run:main

