[metadata]
name = cjdb
version = 0.1.0
description = CJDB is a set of tools enabling CityJSON integration with a PostgreSQL database
long_description_content_type = text/markdown
long_description = file: README.md
keywords = CityJSON, PostgreSQL
license_files = LICENSE
python_requires = >=3.7
license = MIT
url = https://github.com/tudelft3d/cjdb
author = Cynthia Cai, Lan Yan, Yitong Xia, Chris Poon, Siebren Meines, Leon Powalka
maintainer = Gina Stavropoulou
maintainer_email = g.stavropoulou@tudelft.nl

[options]
packages = 
    cj2pgsql
    cj2pgsql.modules
    cj2pgsql.resources
    model.sqlalchemy_models

include_package_data = True

[options.package_data]
cj2pgsql.resources = *.sql

[options.entry_points]
console_scripts =
    cj2pgsql = cj2pgsql.main:main
